List of coctails

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -1,4 +1,6 @@
+@import "variables.pcss";
+
 body {
-    background-color: lavender;
+    background-color: var(--dark-background);
     font-size: 75px;
 }
