--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -51,6 +51,10 @@
     --orange-700: #f57c00;
     --orange-800: #ef6c00;
     --orange-900: #e65100;
+    --dark-background: #222831;
+    --text-color: #393E46;
+    --headings-color: #FD7013;
+    --light-background: #EEEEEE;
     --border-radius-300: 2px;
     --border-radius-400: 3px;
     --border-radius-500: 4px;
