--- a/src/components/layout/components/header/header.styles.pcss
+++ b/src/components/layout/components/header/header.styles.pcss
@@ -1,5 +1,8 @@
+@import "variables.pcss";
+
 .main {
   width: 100%;
   display: flex;
   justify-content: center;
+  color: var(--headings-color);
 }
