--- a/src/components/cocktailsList/components/cocktail/cocktail.styles.pcss
+++ b/src/components/cocktailsList/components/cocktail/cocktail.styles.pcss
@@ -7,15 +7,14 @@
    padding: 20px;
    margin: 15px;
    text-align: center;
-}
 
-.main_cocktail h3 {
-    width: 300px;
-    margin: 20px auto;
-}
-
-.image_cocktail {
-    height: 500px;
-    display: block;
-    margin: 20px auto;
+   &__name {
+        width: 300px;
+        margin: 20px auto;
+   }
+   &__image {
+        height: 500px;
+        display: block;
+        margin: 20px auto;
+   }
 }
