--- a/src/components/cocktailsList/coctaillist.styles.pcss
+++ b/src/components/cocktailsList/coctaillist.styles.pcss
@@ -1,12 +1,6 @@
 @import "variables.pcss";
 
-.cocktail_list_wrapper {
-    margin: 30px auto;
-    max-width: 1280px;
-    background-color:
-}
-
-.main_cocktail_list {
+.cocktail_list {
     background-color: var(--light-background);
     display: flex;
     margin: 0;
@@ -15,6 +9,11 @@
     list-style-type: none;
     justify-content: space-between;
     align-items: center;
+
+    &__wrapper {
+         margin: 30px auto;
+         max-width: 1280px;
+    }
 }
 
 
